--- a/002.html
+++ b/002.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scal">
     <title>我是 標題 </title>
     <link rel="stylesheet" href="reset.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 </head>
 <body>
     
@@ -67,7 +68,7 @@
 
 
 <p>自訂文字</p>
-<img src="img/001.jpg" alt="">
+<img src="c" alt="">
 
 <ul>
     <li>清單1*5</li>
