--- a/004.html
+++ b/004.html
@@ -37,10 +37,11 @@
         } */
 
         .col{
-            width: 380px;
-            /* border: 25px solid;
-            padding: 25px; */
-            margin: 10px;;
+            width: 196px;
+            border-left: 1px solid black;
+            padding:10px;
+            margin: 10px;
+
             font-size: 20px;
             background-color: rgb(180, 143, 188);
         }
@@ -60,6 +61,14 @@
 <div class="col">
  集中母親獨立故障商城滿意典型一位收費指出一是不說，首次金錢準備放下那是同事特色已經媽媽還可以回家不在，凱文逐漸愛情從此身體處理器財政麻煩大戰大部分走了不久走到興趣，行為歡迎光臨言論放心特別相關競爭暴力網頁班，只能科技有限公司近年來你也律師會在是指冠軍，一。
 
+</div>
+<div class="col">
+    集中母親獨立故障商城滿意典型一位收費指出一是不說，首次金錢準備放下那是同事特色已經媽媽還可以回家不在，凱文逐漸愛情從此身體處理器財政麻煩大戰大部分走了不久走到興趣，行為歡迎光臨言論放心特別相關競爭暴力網頁班，只能科技有限公司近年來你也律師會在是指冠軍，一。
+   
+</div>
+<div class="col">
+    集中母親獨立故障商城滿意典型一位收費指出一是不說，首次金錢準備放下那是同事特色已經媽媽還可以回家不在，凱文逐漸愛情從此身體處理器財政麻煩大戰大部分走了不久走到興趣，行為歡迎光臨言論放心特別相關競爭暴力網頁班，只能科技有限公司近年來你也律師會在是指冠軍，一。
+   
 </div>
 </div>
 
