--- a/004.html
+++ b/004.html
@@ -12,9 +12,11 @@
 
         .wrap{
             width: 1200px;
-            display:flex;
-            flex-wrap: wrap;
-            background-color: silver;
+
+            display:flex;     /* 橫排*/
+            flex-wrap: wrap;  /* 超過就折行 */
+            
+            background-color: rgb(136, 134, 134);
         }
 
         /* .L1{
