--- a/003.html
+++ b/003.html
@@ -10,10 +10,10 @@
 
 <body>
     <div>
-        <img class="sl-lazy-image" src="./CHIA_files/600x.webp?" alt="" data-size="600x"></div>
+        <img class="sl-lazy-image" src="./CHIA_files/600x.jpg?" alt="" data-size="600x"></div>
     </div>
     
-    <div class="boxify-image center-contain sl-lazy-image  " style="background-image:url(https://shoplineimg.com/5b4461529a76f081a2000629/5fbc6abf7b95df00172a7cfb/800x.webp?source_format=jpg)" data-size="800x">
+    <div class="boxify-image center-contain sl-lazy-image  " style="background-image:url(https://shoplineimg.com/5b4461529a76f081a2000629/5fbc6abf7b95df00172a7cfb/800x.jpg?source_format=jpg)" data-size="800x">
           
 
 
