--- a/002.html
+++ b/002.html
@@ -138,7 +138,7 @@
               <tr>
           <td>Eating Habits</td>
           <td>Eats everyone's leftovers</td>
-          <td>Nibbles at food</td>
+          <td>Nibbles at noodle</td>
           <td>Hearty eater</td>
           <td>Will eat till he explodes</td>
       </tbody>
