--- a/004.html
+++ b/004.html
@@ -69,18 +69,18 @@
     
     
 <table>
-    <img src="food_001.jpg" alt="">
-    <img src="food_002.jpg" alt="">
+    <img src="noodle_001.jpg" alt="">
+    <img src="noodle_002.jpg" alt="">
 </table>
 
 <br>
 <div class="wrap">
 
-<img src="food_001.jpg" alt="">
+<img src="noodle_001.jpg" alt="">
 
 
 
-<img src="food_002.jpg" alt="">
+<img src="noodle_002.jpg" alt="">
 
 
 
