--- a/Homework_0315.html
+++ b/Homework_0315.html
@@ -154,10 +154,10 @@
     </div>
 
     <div class="wrap">
-        <div class="box">
+        <!-- <div class="box">
             <div class="noodle"><img src="./Homework_0315_files/8_009.jpg" alt=""></div>
             <span>賈以食日-雪莓餅 (期間限定，售完為止)<p class="discount">NT$250</p><p class="price">NT$230</p></span>
-        </div>
+        </div> -->
 
     </div>
 
