--- a/ImpTest.html
+++ b/ImpTest.html
@@ -263,11 +263,11 @@
             <div class="OurOfficesBox">
                 <div class="OfficeItem">
                     <h3>HEAD OFFICE#1</h3>
-                    <h4><address>4096 N Highland St, Arlington
-                        VA 32101, USA</address></h4>
+                    <h4>>4096 N Highland St, Arlington VA 32101, USA</h4>
                     <h4><a href="mailto:imperion@company.com">imperion@company.com</a></h4>
                     <h4><a href="tel:+800 1234 56 78">800 1234 56 78</a></h4>
                 </div>
+                
                 <div class="OfficeItem">
                     <h4>BUSINESS HOURS</h4>
                     <p>Mon-Thu: 9:30 - 21:00</p>
@@ -275,13 +275,13 @@
                     <p>Sat: 10:00 - 15:00</p>
                 </div>
             
-                <div class="OfficeItem">
+            <!--     <div class="OfficeItem">
                     <h3>HEAD OFFICE#2</h3>
                     <h4><address>4096 N Highland St, Arlington
                         VA 32101, USA</address></h4>
                     <h4><a href="mailto:imperion@company.com">imperion@company.com</a></h4>
                     <h4><a href="tel:+800 1234 56 78">800 1234 56 78</a></h4>
-                </div>
+                </div> -->
                <!--  <div class="OfficeItem">
                     <h4>BUSINESS HOURS</h4>
                     <p>Mon-Thu: 9:30 - 21:00</p>
