--- a/008.html
+++ b/008.html
@@ -7,6 +7,21 @@
     <title>Document</title>
 
 <style>
+
+ul{
+width: 800px;
+display: flex;
+flex-wrap: wrap;
+}
+
+li{
+width: 100px;
+height: 100px;
+margin: 3px;
+font-size: xx-large;
+background-color: rgb(166, 107, 189);
+}
+
 .wrap{
 background-color: rgb(237, 255, 196);
 /* display: flex; */
@@ -29,6 +44,7 @@ height: 100px;
 background-color: chartreuse;
 width: 700px;
 height: 350px;
+
 /* flex-grow: 2; */
 
 }
@@ -37,6 +53,7 @@ height: 350px;
 background-color: darkgoldenrod;
 width: 200px;
 height:200PX;
+overflow: hidden;
 /* flex-grow: 1; */
 }
 
@@ -44,11 +61,62 @@ height:200PX;
 
 </style>    
 
+<li>1</li>
+<li>2</li>
+<li>3</li>
+<li>4</li>
+<li>5</li>
+<li>6</li>
+<li>7</li>
+<li>8</li>
+<li>9</li>
+<li>10</li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+<li></li>
+
 <div class="wrap">
     <div class="item1">
     什麼時候開口數碼相機周邊千萬臺中鄉民音樂，革命激烈運輸，看著有一查看在此早已自主可憐因此直到對此課堂圖文，十年一支，其。</div>
-    <div class="item2">2</div>
-    <div class="item3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam alias minus deserunt in ipsum dolor nesciunt neque laborum ex, sed nemo, explicabo aliquam recusandae? Tenetur ipsam repudiandae incidunt repellendus ea.</div>
+    <div class="item2"><img src="./assets/asset 12.png" alt=""></div>
+    <div class="item3"><img src="./assets/asset 3.jpeg" alt=""></div>
 
     </div>
 </div>
