--- a/008.html
+++ b/008.html
@@ -8,26 +8,36 @@
 
 <style>
 
-ul{
-width: 800px;
+.box{
+width: 1000px;
 display: flex;
-flex-wrap: wrap;
+flex-wrap: wrap; 
+position: fixed;
+background-color: cornflowerblue;
+font-size: 50px;
+position: absolute;
+
 }
 
-li{
-width: 100px;
-height: 100px;
-margin: 3px;
-font-size: xx-large;
-background-color: rgb(166, 107, 189);
+.a + p{
+color: rgb(166, 107, 189);
+}
+
+li:nth-child(6){
+    background-color: darkkhaki;
+    position:absolute;
+
+
 }
 
 .wrap{
-background-color: rgb(237, 255, 196);
+/*background-color: rgb(237, 255, 196); */
 /* display: flex; */
 height: 500px;
 font-size: x-large;
 overflow: auto;
+margin: 3px;
+border-color: darkblue;
 /* flex-basis: 50px; */
 
 }
@@ -61,61 +71,13 @@ overflow: hidden;
 
 </style>    
 
-<li>1</li>
-<li>2</li>
-<li>3</li>
-<li>4</li>
-<li>5</li>
-<li>6</li>
-<li>7</li>
-<li>8</li>
-<li>9</li>
-<li>10</li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-<li></li>
-
+<p> 什麼時候開口數碼相機周邊千萬臺中鄉民音樂，革命激烈運輸，看著有一查看在此早已自主可憐因此直到對此課堂圖文，十年一支，其。</div>
+    </p>
 <div class="wrap">
     <div class="item1">
-    什麼時候開口數碼相機周邊千萬臺中鄉民音樂，革命激烈運輸，看著有一查看在此早已自主可憐因此直到對此課堂圖文，十年一支，其。</div>
-    <div class="item2"><img src="./assets/asset 12.png" alt=""></div>
+    <div class="item2">
+<div class="item3" ></div>
+    </div>
     <div class="item3"><img src="./assets/asset 3.jpeg" alt=""></div>
 
     </div>
