--- a/009.html
+++ b/009.html
@@ -39,9 +39,10 @@
   background-color: #000;
   opacity:.5
 }
+
 .content{
-  width: 400px;
-  padding: 10px;
+  width: 300px;
+height: 200px;
   background-color: #ccc;
   text-align: center;
   position: relative;
@@ -50,11 +51,23 @@
   display: inline-block;
   vertical-align: middle;
 }
+
+.black{
+
+    width: 600px;
+  height: 400px;
+  background-color: #ccc;
+  text-align: center;
+
+}
+
     </style>
     
-    <div class="content">
-  <h2>垂直置中</h2>
-  <div><div><p>
+  <div class="black">
+
+  <div class="content">
+      <div>
+          <p>
     蓋版廣告;<br>
     直豎在中<br>
     蓋版廣告<br>
