--- a/008.html
+++ b/008.html
@@ -9,14 +9,33 @@
 <style>
 
 .box{
-width: 1000px;
-display: flex;
-flex-wrap: wrap; 
-position: fixed;
+width: 200px;
+height: 200px;
 background-color: cornflowerblue;
-font-size: 50px;
-position: absolute;
+}
 
+.box .txt{
+position: absolute;
+top: o;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: dimgray;
+color:gold;
+opacity: .5;
+transition:top 1s 0s, opacity 1s 1s;
+}
+
+.box:hover{
+    background-color: darkorange;
+}
+.box:hover .txt{
+top: 0;
+opacity: 1;
+}
+
+.box:active{
+    background-color: darkseagreen;
 }
 
 .a + p{
@@ -75,7 +94,7 @@ overflow: hidden;
     </p>
 <div class="wrap">
     <div class="item1">
-    <div class="item2">
+    <div class="txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. A hic ut earum asperiores quos corrupti error nisi vel, assumenda reprehenderit amet. Aliquid voluptatum cum nemo vel fuga ipsam asperiores autem.
 <div class="item3" ></div>
     </div>
     <div class="item3"><img src="./assets/asset 3.jpeg" alt=""></div>
