--- a/008.html
+++ b/008.html
@@ -92,9 +92,10 @@ overflow: hidden;
 
 <p> 什麼時候開口數碼相機周邊千萬臺中鄉民音樂，革命激烈運輸，看著有一查看在此早已自主可憐因此直到對此課堂圖文，十年一支，其。</div>
     </p>
+    
 <div class="wrap">
     <div class="item1">
-    <div class="txt">Lorem ipsum dolor sit amet consectetur adipisicing elit. A hic ut earum asperiores quos corrupti error nisi vel, assumenda reprehenderit amet. Aliquid voluptatum cum nemo vel fuga ipsam asperiores autem.
+    <div class="txt">Lorem ipsum dolor sit amet consectetur adipisicAliquid.
 <div class="item3" ></div>
     </div>
     <div class="item3"><img src="./assets/asset 3.jpeg" alt=""></div>
