--- a/Imperion.html
+++ b/Imperion.html
@@ -46,6 +46,12 @@ img.emoji {
 <link rel="stylesheet" id="rs-plugin-settings-css" href="./Imperion_files/settings.css" type="text/css" media="all">
 <style id="rs-plugin-settings-inline-css" type="text/css">
 
+@media screen and (min-width:1024px){
+	item{
+		background-color: violet;
+	}
+}
+
 #rs-demo-id {}
 .tp-leftarrow{
 	text-align: left;
