--- a/html5/test_css.htm
+++ b/html5/test_css.htm
@@ -19,46 +19,48 @@ margin: 15px;
 
 @media screen and (min-width: 768px) {
 .wrap{
+margin:auto;
 display: flex;
 flex-wrap: wrap;
 }
 
+
 .item{
-width: 46%;
+/* width: 46%; */
 margin-left: 1.9%;
 margin-right: 1.9%;
 }
 
 
-	
-	/* @media screen and (min-width: 769px) and  (max-width: 1023px){
-		body {
-			background-color: yellow;
-		}
-	}	
-	
-	@media screen and (min-width: 1024px) {
-		body {
-			background-color: purple;
-		}
-	}	
+@media screen and (min-width: 1024px) {
+.wrap{
 
-	@media screen and (min-width: 1366px) {
-		body {
-			background-color:yellow;
-		}
-	}	
- */
+width:calc(100% / 3 - 30px);
+
+display: flex;
+
+flex-wrap: wrap;
+}
+
+.item{
+width: 30%;
+margin-left: 1.46%;
+margin-right: 1.46%;
+}
+
 	</style>
   </head>	
+
   <body>
 	  <div class="wrap">
+	  
 		  <div class="item"></div>
 		  <div class="item"></div>
 		  <div class="item"></div>
 		  <div class="item"></div>
 		  <div class="item"></div>
 		  <div class="item"></div>
+		
 
 	  </div>
 
