--- a/005.html
+++ b/005.html
@@ -32,6 +32,23 @@ span{
     font-size: xx-large;
 }
 
+h3{
+font: larger;
+color:blue;
+}
+
+
+h2{
+font: xx-larger;
+color:black;
+}
+
+
+h1{
+font: xxx-larger;
+color:red;
+}
+
 </style>
 </head>
 
@@ -43,9 +60,20 @@ span{
     <span class="span">
     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, obcaecati. Commodi sint fugit, culpa ut fuga sequi eius deleniti voluptatem cumque dolorum. Minus aliquam ullam beatae nobis, praesentium nulla dicta!
     </span>
-<h3>h3</h3>
+<h3 class="h3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem dolores cumque sint, fuga autem, illo facere maxime enim reprehenderit aperiam in! Saepe deserunt laudantium dolores ipsam ea vel quam quidem.
+</h3>
 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem dolores cumque sint, fuga autem, illo facere maxime enim reprehenderit aperiam in! Saepe deserunt laudantium dolores ipsam ea vel quam quidem.
-    <ul>
+   
+
+<h2 class="h2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem dolores cumque sint, fuga autem, illo facere maxime enim reprehenderit aperiam in! Saepe deserunt laudantium dolores ipsam ea vel quam quidem.
+</h2>
+   
+
+<h1 class="h1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem dolores cumque sint, fuga autem, illo facere maxime enim reprehenderit aperiam in! Saepe deserunt laudantium dolores ipsam ea vel quam quidem.
+</h1>
+   
+
+<ul>
         <li>1</li>
         <li>2</li>
         <li>3</li>
