--- a/005.html
+++ b/005.html
@@ -31,7 +31,7 @@ span{
 
     font-size: xx-large;
 }
-
+/* 
 h3{
 font: larger;
 color:blue;
@@ -42,11 +42,11 @@ h2{
 font: xx-larger;
 color:black;
 }
+ */
 
-
-h1{
+h3,h2,h1{
 font: xxx-larger;
-color:red;
+color:rgb(0, 38, 255);
 }
 
 </style>
@@ -57,21 +57,39 @@ color:red;
 <input type="checkbox" name="" id="">
 
 
-    <span class="span">
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, obcaecati. Commodi sint fugit, culpa ut fuga sequi eius deleniti voluptatem cumque dolorum. Minus aliquam ullam beatae nobis, praesentium nulla dicta!
-    </span>
+<span class="span">
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente, obcaecati. Commodi sint fugit, culpa ut fuga sequi eius deleniti voluptatem cumque dolorum. Minus aliquam ullam beatae nobis, praesentium nulla dicta!
+</span>
+
 <h3 class="h3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem dolores cumque sint, fuga autem, illo facere maxime enim reprehenderit aperiam in! Saepe deserunt laudantium dolores ipsam ea vel quam quidem.
 </h3>
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem dolores cumque sint, fuga autem, illo facere maxime enim reprehenderit aperiam in! Saepe deserunt laudantium dolores ipsam ea vel quam quidem.
-   
-
+  
 <h2 class="h2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem dolores cumque sint, fuga autem, illo facere maxime enim reprehenderit aperiam in! Saepe deserunt laudantium dolores ipsam ea vel quam quidem.
 </h2>
    
-
 <h1 class="h1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem dolores cumque sint, fuga autem, illo facere maxime enim reprehenderit aperiam in! Saepe deserunt laudantium dolores ipsam ea vel quam quidem.
 </h1>
    
+<!-- <li>
+<ul>
+<li><a href="">sub link1</a></li>
+<li><a href="">sub link2</a></li>
+<li><a href="">sub link3</a></li>
+<li><a href="">sub link4</a></li>
+<li><a href="">sub link5</a></li>
+</li> 
+
+</ul> -->
+
+
+<ul>
+
+</ul>
+
+
+<ul>
+
+</ul>
 
 <ul>
         <li>1</li>
