--- a/0329_003.html
+++ b/0329_003.html
@@ -5,38 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./0329_003.css">
 <style>
-    ul.drop-down-menu ul {
-        border: #ccc 1px solid;
-        position: absolute;
-        z-index: 99;
-        left: -1px;
-        top: 100%;
-       min-width: 180px;
-    }
 
-    ul.drop-down-menu ul li {
-        border-bottom: #ccc 1px solid;
-    }
-
-    ul.drop-down-menu ul li:last-child {
-        border-bottom: none;
-    }
-
-    ul.drop-down-menu ul ul { /*第三層以後的選單出現位置與第二層不同*/
-        z-index: 999;
-        top: 10px;
-        left: 90%;
-    }
-
-    ul.drop-down-menu ul { /*隱藏次選單*/
-        display: none;
-    }
-
-    ul.drop-down-menu li:hover > ul { /* 滑鼠滑入展開次選單*/
-        display: block;
-    }
- 
 </style>
 
 </head>
@@ -54,8 +25,10 @@
                 <li><a href="#">徵才資訊</a>
                 </li>
             </ul>
+
         </li>
         <li><a href="#">Magento</a>
+
         </li>
         <li><a href="#">服務項目</a>
             <ul>
@@ -109,5 +82,8 @@
         <li><a href="#">聯絡我們</a>
         </li>
     </ul>
+
+  
+  
 </body>
 </html>
