--- a/0329_003.html
+++ b/0329_003.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./0329_003.css">
-<style>
 
-</style>
+    <link rel="stylesheet" href="./0329_003.css">
+
+    <label for="menu-switcher" class="hamburger">
+        <div class="hamburger-line"></div>
+    </label>
+
+    <h1 class="logo">
+        <a href="#">menu</a>
+      </h1>
+      <ul class="menu">
+        <li><a href="">link 1</a></li>
+        <li><a href="">link 2</a></li>
+        <li><a href="">link 3</a></li>
+        <li><a href="">link 4</a></li>
+      </ul>
+      <br>
 
 </head>
 
