--- a/Build.html
+++ b/Build.html
@@ -31,7 +31,7 @@
         <div class="fixed-top d-flex justify-content-center align-self-center text-reset">
             <div class="d-flex justify-content-center">
                 <a href="JavaScript:;" class="d-flex justify-content-center">
-                    <img src="./logo.webp" alt="buildschoolicon" class="buildschoolicon align-self-center">
+                    <img src="./logo.jpeg" alt="buildschoolicon" class="buildschoolicon align-self-center">
                     <div>
                         <h1 class="text-info"> Build School</h1>
                         <h2 class="text-info">developer career builder</h2> 
@@ -61,7 +61,7 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./1.webp" class="d-block w-100" alt="...">
+                <img src="./1.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <div>
                         <h3>軟體工程師的路上有人帶</h3>
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./2.webp" class="d-block w-100" alt="...">
+                <img src="./2.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <div>
                         <h3>大量的程式練習才能積累經驗</h3>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./3.webp" class="d-block w-100" alt="...">
+                <img src="./3.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <div>
                         <h3>想搭上火箭?門票是給想成為軟體工程師的你</h3>
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./4.webp" class="d-block w-100" alt="...">
+                <img src="./4.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <div>
                         <h3>動手做出東西才能解決問題</h3>
@@ -117,7 +117,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./5.webp" class="d-block w-100" alt="...">
+                <img src="./5.jpeg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <div>
                         <h3>這裏沒有考試只有滿滿的程式碼</h3>
