--- a/0328.html
+++ b/0328.html
@@ -90,7 +90,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./1.jpeg" class="d-block w-100" alt="...">
+        <img src="./1.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>First slide label</h5>
           <p>Some representative placeholder content for the first slide.</p>
@@ -104,21 +104,21 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./3.jpeg" class="d-block w-100" alt="...">
+        <img src="./3.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./4.jpeg" class="d-block w-100" alt="...">
+        <img src="./4.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="./5.jpeg" class="d-block w-100" alt="...">
+        <img src="./5.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>Third slide label</h5>
           <p>Some representative placeholder content for the third slide.</p>
