--- a/Build.html
+++ b/Build.html
@@ -57,7 +57,7 @@
           </div>
           <div class="carousel-inner"> -->
 
-        <!-- <div id="carousel-indicators"> -->
+        <div id="carousel-indicators">
             <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" class="active" aria-current="true" aria-label="Slide 1"></button>
