--- a/0402.html
+++ b/0402.html
@@ -7,11 +7,31 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Build_006_files/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link rel="stylesheet" href="./Build_006_files/style05.css">
+    <style>
+        
+    .fixed-top {
+    position: absolute;
+    font-size: medium;
+    }
 
-    <title>Hello, world!</title>
+    .card {
+      position: relative;
+      display:flex;
+      flex-wrap: wrap;
+        margin:20px;
+        padding: 60px;
+        image-rendering: auto;
+    }
+    </style>
+
+    <title>Hello</title>
+
   </head>
+  
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Hello</h1>
 
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
