--- a/0402.html
+++ b/0402.html
@@ -33,11 +33,11 @@
   <body>
     <h1>Hello</h1>
 
-    <!-- <div id="carouselExampleCaptions" class="position-relative carousel slide w-100" data-ride="carousel"> -->
+    <div id="carouselExampleCaptions" class="position-relative carousel slide w-100" data-ride="carousel">
        
             
 
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <!-- <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel"> -->
         <div class="fixed-top d-flex justify-content-center align-self-center text-reset">
             <div class="d-flex justify-content-center">
                 <a href="JavaScript:;" class="d-flex justify-content-center">
