--- a/0402.html
+++ b/0402.html
@@ -36,7 +36,7 @@
         <div class="fixed-top d-flex justify-content-center align-self-center text-reset">
             <div class="d-flex justify-content-center">
                 <a href="JavaScript:;" class="d-flex justify-content-center">
-                    <img src="./Build_006_files/logo.jpg" alt="buildschoolicon" class="buildschoolicon align-self-center">
+                    <img src="./logo.png" alt="buildschoolicon" class="buildschoolicon align-self-center">
                     <div>
                         <h1 class="text-info"> Build School</h1>
                         <h2 class="text-info">developer career builder</h2> 
