--- a/0402.html
+++ b/0402.html
@@ -65,7 +65,7 @@
     
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./Build_006_files/1.webp" class="d-block w-100" alt="...">
+                    <img src="./" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <div>
                             <h3>軟體工程師的路上有人帶</h3>
