--- a/04011409.html
+++ b/04011409.html
@@ -114,6 +114,7 @@
         <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
           Button with data-bs-target
         </button>
+
         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
             <div class="btn-group me-2" role="group" aria-label="First group">
               <button type="button" class="btn btn-primary">1</button>
@@ -131,6 +132,17 @@
             <div class="btn-group" role="group" aria-label="Third group">
               <button type="button" class="btn btn-info">8</button>
             </div>
+
+ <!-- Vertically centered modal -->
+<div class="modal-dialog modal-dialog-centered">
+  ...
+</div>
+
+<!-- Vertically centered scrollable modal -->
+<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+  ...
+</div>
+
           </div>
       </p>
 
