--- a/04011409.html
+++ b/04011409.html
@@ -12,7 +12,7 @@
 <style>
   .popover{
    padding:6px;
-   background-color:rgb(247, 161, 255);
+   background-color:rgb(249, 197, 253);
    color:rgb(255, 255, 255);
    }
 </style>
@@ -92,9 +92,9 @@
 
 <button type="button" class="btn btn-primary">Primary</button>
 <button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
+<button type="button" class="btn btn-success btn-lg">Success</button>
 <button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-warning">Warning</button>
+<button type="button" class="btn btn-warning btn-lg">Warning</button>
 <button type="button" class="btn btn-info">Info</button>
 <button type="button" class="btn btn-light">Light</button>
 <button type="button" class="btn btn-dark">Dark</button>
