--- a/04011409.html
+++ b/04011409.html
@@ -107,8 +107,8 @@
   <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
     Button with data-bs-target
   </button>
-
-<div class="btn-group" role="group" aria-label="Basic mixed styles example">
+ 
+<div class="btn-group d-grid gap-1" role="group" aria-label="Basic mixed styles example">
     <button type="button" class="btn btn-danger">Left Button</button>
     <button type="button" class="btn btn-warning">Middle Button</button>
     <button type="button" class="btn btn-success">Right Button</button>
