--- a/04011409.html
+++ b/04011409.html
@@ -19,6 +19,25 @@
 
   </head>
   <body>
+    
+    <form>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+      </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1">
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    
+
     <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
@@ -108,7 +127,7 @@
     Button with data-bs-target
   </button>
  
-<div class="btn-group d-grid gap-1" role="group" aria-label="Basic mixed styles example">
+<div class="btn-group d-grid gap-2 col-6 mx-auto" role="group" aria-label="Basic mixed styles example">
     <button type="button" class="btn btn-danger">Left Button</button>
     <button type="button" class="btn btn-warning">Middle Button</button>
     <button type="button" class="btn btn-success">Right Button</button>
