--- a/04011409.html
+++ b/04011409.html
@@ -36,6 +36,16 @@
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+<br><br>
+    <div class="row">
+      <div class="col align-self-center" width=50vw>
+        <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+      </div>
+      <div class="col">
+        <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+      </div>
+    </div>
+    <br><br>
     
 
     <div class="accordion" id="accordionExample">
