--- a/HW_0406.html
+++ b/HW_0406.html
@@ -7,7 +7,7 @@
     <title>台灣水庫即時水情</title>
     <style>
         .w-100 {
-            /* text-align: center; */
+            text-align: center;
             background-color: rgb(242, 254, 255);
         }
     </style>
