--- a/PizzaCard.html
+++ b/PizzaCard.html
@@ -54,7 +54,7 @@
     </style>
 </head>
 
-<body class="" style="">
+<body class="">
     <div class="container-fluid">
         <div class="jumbotron bg-info">
             <h1>Pizza Card Template</h1>
