--- a/Apple.html
+++ b/Apple.html
@@ -63,8 +63,10 @@
     <h1 class="d-none" name="h1">Apple</h1>
     <nav class="bar navbar-dark bg-dark text-center">
     <a class="d-inline-block text-light p-3" href="javascript:show(&quot;iPhone&quot;)">iPhone</a>
-   <!--  <a class="d-inline-block text-light p-3" href="javascript:show(&quot;iPad&quot;)">iPad</a>
-    <a class="d-inline-block text-light p-3" href="javascript:show(&quot;Mac&quot;)">Mac</a></nav> -->
+   
+    <a class="d-inline-block text-light p-3" href="javascript:show(&quot;iPad&quot;)">iPad</a>
+    <a class="d-inline-block text-light p-3" href="javascript:show(&quot;Mac&quot;)">Mac</a>
+    </nav>
     <div class="container w-1000px">
         <div class="row ">
             <div class="col-12 col-lg-6 " id="_pic"><img src="./Apple_files/iPhone11-red.png" class="w-100"></div>
@@ -79,7 +81,7 @@
         </script>
     <script>
         var data = [];
-        // const url = "https://raw.githubusercontent.com/yijulin/yijulin.github.io/main/HomeWork/HW0413/20210413.json";
+      const url = "https://raw.githubusercontent.com/yijulin/yijulin.github.io/main/HomeWork/HW0413/20210413.json";
 
         let xhr = new XMLHttpRequest();
         window.onload = function () {
