--- a/Phone.html
+++ b/Phone.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0051)https://bearseeyou.github.io/hw_js_Apple/apple.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <!-- Required meta tags -->
     
@@ -7,7 +6,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="./Phone_files/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>Hello, world!</title>
+    <title>Phone</title>
     <style>
         .container {
             max-width: 1200px;
@@ -75,30 +74,6 @@
             height: 30px;
         }
 
-        /* .iwhite.rounded-circle {
-            background-color: rgb(243, 237, 237);
-        }
-
-        .iblack.rounded-circle {
-            background-color: rgb(32, 32, 32);
-        }
-
-        .igreen.rounded-circle {
-            background-color: rgb(182, 241, 214);
-        }
-
-        .iyellow.rounded-circle {
-            background-color: rgb(253, 245, 136);
-        }
-
-        .ipurple.rounded-circle {
-            background-color: rgb(231, 197, 248);
-        }
-
-        .ired.rounded-circle {
-            background-color: rgb(223, 31, 57);
-        } */
-
         .capacity {
             font-size: 28px;
             font-weight: bolder;
@@ -132,66 +107,7 @@
             <div class="col-12 col-md-7 text-center">
                 <!-- <img class="" src="./apple_img/iphone-black.png" alt=""> -->
             <img src="./Phone_files/iphone11-select-2019-family.png"></div>
-            <!-- <section class="col-12 col-md-5 pt-5">
-                <h2>購買iPhone 11</h2>
-                <form class="row border-bottom pt-4 pb-3">
-                    <h3 class="ps-0 mb-3">選擇外觀。</h3>
-                    <input type="radio" name="color" id="white-iPhone11">
-                    <label class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3" for="white-iPhone11">
-                        <span class="iwhite rounded-circle  bg-gradient mx-auto mb-1"></span>
-                        <span class="desc">白色</span>
-                    </label>
-
-                    <input type="radio" name="color" id="black-iPhone11">
-                    <label class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3" for="black-iPhone11">
-                        <span class="iblack rounded-circle  bg-gradient mx-auto mb-1"></span>
-                        <span class="desc">黑色</span>
-                    </label>
-                    <input type="radio" name="color" id="green-iPhone11">
-                    <label class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3" for="green-iPhone11">
-                        <span class="igreen rounded-circle  bg-gradient mx-auto mb-1"></span>
-                        <span class="desc">綠色</span>
-                    </label>
-                    <input type="radio" name="color" id="yellow-iPhone11">
-                    <label class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3" for="yellow-iPhone11">
-                        <span class="iyellow rounded-circle  bg-gradient mx-auto mb-1"></span>
-                        <span class="desc">黃色</span>
-                    </label>
-                    <input type="radio" name="color" id="purple-iPhone11">
-                    <label class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3" for="purple-iPhone11">
-                        <span class="ipurple rounded-circle  bg-gradient mx-auto mb-1"></span>
-                        <span class="desc">紫色</span>
-                    </label>
-                    <input type="radio" name="color" id="red-iPhone11">
-                    <label class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3" for="red-iPhone11">
-                        <span class="ired rounded-circle  bg-gradient mx-auto mb-1"></span>
-                        <span class="desc">(PRODUCT)RED</span>
-                    </label>
-                </form>
-                <form class="row pt-4 pb-3 border-bottom">
-                    <h3 class="ps-0 mb-3">選擇儲存容量。</h3>
-                    <input type="radio" name="capacity" id="64gb-iPhone11">
-                    <label class="choose-capacity btn btn-outline-primary col-5 py-4 me-3 mb-3" for="64gb-iPhone11">
-                        <span class="capacity">64</span>
-                        <span class="gb">GB**</span>
-                        <span class="desc">NT$19,900</span>
-                    </label>
-                    <input type="radio" name="capacity" id="128gb-iPhone11">
-                    <label class="choose-capacity btn btn-outline-primary col-5 py-4 me-3 mb-3" for="128gb-iPhone11">
-                        <span class="capacity">128</span>
-                        <span class="gb">GB**</span>
-                        <span class="desc">NT$21,500</span>
-                    </label>
-                    <input type="radio" name="capacity" id="256gb-iPhone11">
-                    <label class="choose-capacity btn btn-outline-primary col-5 py-4 me-3 mb-3" for="256gb-iPhone11">
-                        <span class="capacity">256</span>
-                        <span class="gb">GB**</span>
-                        <span class="desc">NT$25,500</span>
-                    </label>
-                </form>
-                <p class="total-price text-center mt-5">NT$19,900</p>
-
-            </section> -->
+        
             <div class="col-12 col-md-5 pt-5"><h2>購買iPhone11</h2><form class="row border-bottom pt-4 pb-3"><h3 class="ps-0 mb-3">外觀</h3><input type="radio" name="color" id="white-iPhone11"><label for="white-iPhone11" class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3"><span class="rounded-circle bg-gradient mx-auto mb-1" style="background-color: rgb(243, 237, 237);"></span><span class="desc">白色</span></label><input type="radio" name="color" id="black-iPhone11"><label for="black-iPhone11" class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3"><span class="rounded-circle bg-gradient mx-auto mb-1" style="background-color: rgb(32, 32, 32);"></span><span class="desc">黑色</span></label><input type="radio" name="color" id="green-iPhone11"><label for="green-iPhone11" class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3"><span class="rounded-circle bg-gradient mx-auto mb-1" style="background-color: rgb(182, 241, 214);"></span><span class="desc">綠色</span></label><input type="radio" name="color" id="yellow-iPhone11"><label for="yellow-iPhone11" class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3"><span class="rounded-circle bg-gradient mx-auto mb-1" style="background-color: rgb(253, 245, 136);"></span><span class="desc">黃色</span></label><input type="radio" name="color" id="purple-iPhone11"><label for="purple-iPhone11" class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3"><span class="rounded-circle bg-gradient mx-auto mb-1" style="background-color: rgb(231, 197, 248);"></span><span class="desc">紫色</span></label><input type="radio" name="color" id="red-iPhone11"><label for="red-iPhone11" class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3"><span class="rounded-circle bg-gradient mx-auto mb-1" style="background-color: rgb(223, 31, 57);"></span><span class="desc">紅色</span></label></form><form class="row border-bottom pt-4 pb-3"><h3 class="ps-0 mb-3">儲存裝置</h3><input type="radio" name="capacity" id="64-iPhone11"><label for="64-iPhone11" class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3"><span class="capacity">64</span><span class="gb">GB**</span><span class="desc">NT$19,900</span></label><input type="radio" name="capacity" id="128-iPhone11"><label for="128-iPhone11" class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3"><span class="capacity">128</span><span class="gb">GB**</span><span class="desc">NT$21,500</span></label><input type="radio" name="capacity" id="256-iPhone11"><label for="256-iPhone11" class="choose-color btn btn-outline-primary col-5 py-4 me-3 mb-3"><span class="capacity">256</span><span class="gb">GB**</span><span class="desc">NT$25,000</span></label></form><p class="total-price text-center mt-5"></p></div>
         </div>
     </div>
@@ -477,10 +393,6 @@
                 let connect_span = document.createElement('span');
                 connect_span.classList.add('internet');
                 connect_span.innerText = item.internet;
-
-                // let internet_span = document.createElement('span');
-                // internet_span.classList.add('internet');
-                // internet_span.innerText = 'internet**';
 
                 let desc_span = document.createElement('span');
                 desc_span.classList.add('desc');
