--- a/LOL.html
+++ b/LOL.html
@@ -1472,13 +1472,15 @@
             </div>
         </div>
     </div>
-    <script src="./LOL_files/jquery-3.5.1.slim.min.js.下載" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="./LOL_files/jquery-3.5.1.slim.min.js.下載" integrity="sha256-HwWONEZrpuoh951cQD1ov2HUK5zA5DwJ1DNUXaM6FsY=" crossorigin="anonymous"></script>
+    <!-- <script src="./LOL_files/jquery-3.5.1.slim.min.js.下載" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script> -->
     <script src="./LOL_files/popper.min.js.下載" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    
     <script src="./LOL_files/bootstrap.min.js.下載" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
+    
     <script src="./LOL_files/champion.js.下載"></script>
     <script type="module">
-        import { $g } from '../Modules/helper.js';
+        import { $g } from './helpers/helpers.js';
         console.warn(champion);
         let row = $g('.row');
         let Allchampion = champion.data;
