--- a/LOL.html
+++ b/LOL.html
@@ -1479,8 +1479,9 @@
     <script src="./LOL_files/bootstrap.min.js.下載" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     
     <script src="./LOL_files/champion.js.下載"></script>
+
     <script type="module">
-        import { $g } from './helpers/helpers.js';
+        import { $g } from './Modules/helpers.js';
         console.warn(champion);
         let row = $g('.row');
         let Allchampion = champion.data;
