--- a/Pizza.html
+++ b/Pizza.html
@@ -57,7 +57,7 @@
 <body>
 
     <div class="container-fluid">
-        <div class="jumbotron bg-info">
+        <div class="jumbotron bg-success">
             <h1>Pizza Card Template</h1>
         </div>
 
