--- a/selectable.html
+++ b/selectable.html
@@ -15,7 +15,7 @@
         center: 'title',
         right: 'dayGridMonth,timeGridWeek,timeGridDay'
       },
-      initialDate: '2021-04-01',
+      initialDate: '2021-05-01',
       navLinks: true, 
       selectable: true,
       selectMirror: true,
@@ -39,6 +39,14 @@
       editable: true,
       dayMaxEvents: true, 
       events: [
+        {
+          title: '*** 考試 ***',
+          start: '2021-06-26'
+        },
+        {
+          title: '*** 報名開始 ***',
+          start: '2021-05-12'
+        },
         {
           title: 'All Day Event',
           start: '2021-04-07'
